
2012-02-01  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_unary_expr): Make the constructor explicit.
	(__gmp_expr(__gmp_expr&&)): New move constructors.
	(__gmp_expr::operator=(__gmp_expr&&)): New move assignments.
	(swap): Mark as noexcept.
	(__GMPXX_USE_CXX11): New macro.
	(__GMPXX_NOEXCEPT): New macro.
	* tests/cxx/t-cxx11.cc: New file.
	* tests/cxx/Makefile.am: Added t-cxx11.

2012-01-30  Torbjorn Granlund  <tege@gmplib.org>

	* tests/mpz/t-powm.c: Ensure all sizes are seen.

2012-01-30  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_binary_expr): Let things happen in place: d=a+b+c
	when d != c.
	* tests/cxx/t-binary.cc: Test variable reuse: c=a+b+c.

2012-01-28  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h: Don't compute -LONG_MIN.

	* doc/gmp.texi (gmp_randclass::get_z_bits): Use mp_bitcnt_t.
	* gmpxx.h: Replace unsigned long with mp_bitcnt_t.

2012-01-26 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/mpz/t-fac_ui.c: Increase default test cases.

	* mpz/prodlimbs.c: New file, mpz_prodlimbs implementation.
	* gmp-impl.h: mpz_prodlimbs declaration.
	* Makefile.am (MPZ_OBJECTS): add mpz/prodlimbs$U.lo .
	* mpz/Makefile.am (libmpz_la_SOURCES): add prodlimbs.c .
	(fac_ui.h): remove target (moved up one directory).
	* mpz/fac_ui.c: mpz_prodlimbs removed, micro-optimisations.

2012-01-25  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c: Remove unused tuneup variables.

2012-01-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/fac_ui.c: Reduce branches in basecases.

2012-01-18  Marc Glisse  <marc.glisse@inria.fr>

	* doc/gmp.texi (mpf_class::mpf_class): Use mp_bitcnt_t.

2012-01-17  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Add ultrasparc T4 support.

	* demos/isprime.c (main): Run 25 millerrabin tests.

2012-01-16 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/fac_ui.c (SIEVE_SEED): Define value for small limb size.
	(mpz_oddswing_1): Reduce the number of divisions.
	(mpz_oddfac_1): Reduce memory usage.