@@ -94,6 +94,15 @@
 	* tests/cxx/t-cxx11.cc: New file.
 	* tests/cxx/Makefile.am: Added t-cxx11.
 
+2012-01-31  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/generic/powm_sec.c (SQR_BASECASE_LIM): New name for
+	SQR_BASECASE_MAX.
+	(SQR_BASECASE_LIM, fat variant): Define to read __gmpn_cpuvec.
+	(SQR_BASECASE_LIM, native variant): Define to SQR_TOOM2_THRESHOLD
+	straight, without arithmetic.
+	(mpn_local_sqr): Use BELOW_THRESHOLD as per Marco's suggestion.
+
 2012-01-30  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpz/t-powm.c: Ensure all sizes are seen.
